--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://chachalesley.dev/">
+    <meta property="og:url" content="https://github.com/Chacha-Lesley">
     <meta property="og:title" content="Chacha Lesley - Web Developer Portfolio">
     <meta property="og:description" content="A storyteller turned web developer, creating digital experiences with code and creativity.">
     <meta property="og:image" content="./images/profile.jpeg">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://chachalesley.dev/">
+    <meta property="twitter:url" content="https://github.com/Chacha-Lesley">
     <meta property="twitter:title" content="Chacha Lesley - Web Developer Portfolio">
     <meta property="twitter:description" content="A storyteller turned web developer, creating digital experiences with code and creativity.">
     <meta property="twitter:image" content="./images/profile.jpeg">
